tests/baselines/reference/restParamsWithNonRestParams.errors.txt
==== tests/cases/compiler/restParamsWithNonRestParams.ts (2 errors) ====
    function foo(...b:number[]){}
    foo(); // ok
    function foo2(a:string, ...b:number[]){}
    foo2(); // should be an error
    ~~~~
!!! restParamsWithNonRestParams.ts(4,1): error TS2081: Supplied parameters do not match any signature of call target.
    ~~~~
!!! restParamsWithNonRestParams.ts(4,1): error TS2087: Could not select overload for 'call' expression.
    function foo3(a?:string, ...b:number[]){}
    foo3(); // error but shouldn't be